[package]
name = "rivium"
version = "0.1.0-prototype.2"
edition = "2021"
description = "RISC-V emulator and tools"
repository = "https://github.com/chykon/rivium-mono/tree/main/projects/rivium"
license = "MIT-0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.81"
